Add 3 new functions we mentioned yk
